// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stepper > handles clicks when interactive 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles_inactive__1mvphq2y styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > handles clicks when interactive and small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles_inactive__1mvphq2y styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > handles clicks when not interactive 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with all selected 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with animation 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_animated_true__1mvphq2i styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_animated_true__1mvphq2i styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_medium__1mvphq2v styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_animated_true__1mvphq2i styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with children 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_animated_true__1mvphq2i styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
        Children
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_animated_true__1mvphq2i styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_medium__1mvphq2v styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_animated_true__1mvphq2i styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with disabled steps 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_true__1mvphq2k styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_true__1mvphq212 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          1
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_true__1mvphq21a styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_true__1mvphq2k styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_true__1mvphq212 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_true__1mvphq21a styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with selected prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_medium__1mvphq2p styles_undefined_compound_1__1mvphq2s styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with small size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmallStrong__m4c9owq style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 styles_addMarginTop_true__1mvphq218 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly with step number in row 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_right__1mvphq25 styles_separator_true__1mvphq27 styles_undefined_compound_1__1mvphq29"
    >
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="styles__1mvphq2a styles_temporal_done__1mvphq2d"
        data-size="medium"
      />
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="styles__1mvphq2a styles_temporal_current__1mvphq2c"
        data-size="medium"
      />
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without Stepper.Step 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_true__1mvphq27 styles_undefined_compound_0__1mvphq28"
    >
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_done_true__1mvphq2l styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles_undefined_compound_3__1mvphq2u styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_small__1jy42m0c styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        Step 1
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        Step 2
      </div>
      <div
        class="step styles__1mvphq2g styles__1mvphq2h styles_disabled_false__1mvphq2j styles_labelPosition_bottom__1mvphq2m styles_separator_true__1mvphq2o styles_size_small__1mvphq2q styles_undefined_compound_0__1mvphq2r styles_undefined_compound_2__1mvphq2t styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_small__1mvphq215 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_small__1jy42m0c styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        Step 3
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without separator 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_bottom__1mvphq24 styles_separator_false__1mvphq26"
    >
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`stepper > renders correctly without separator with label on the right 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__1mvphq23 styles_labelPosition_right__1mvphq25 styles_separator_false__1mvphq26"
    >
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-0"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_default__1jy42m02 styles_size_medium__1jy42m0b styles_undefined_compound_0__1jy42m0f"
        >
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_size_small__vbm0wqg styles_undefined_compound_39__vbm0wq1n"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_24__m4c9ow23 style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 1
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-1"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_isActive_true__1mvphq213 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_7__1jy42m0m"
        >
          2
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_primary__m4c9owf style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_0__m4c9ow1f style_undefined_compound_72__m4c9ow3f"
          style="--qabug41: normal;"
        >
          step 2
        </span>
      </div>
      <div
        class="step styles__1mvphq2g styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_flex-start_xxsmall__toi52u6j"
        data-testid="stepper-step-2"
      >
        <div
          class="styles__1mvphq210 styles__1mvphq2z styles_disabled_false__1mvphq211 styles_size_medium__1mvphq214 styles__1jy42m00 styles_prominence_strong__1jy42m03 styles_size_medium__1jy42m0b styles_undefined_compound_9__1jy42m0o"
        >
          3
        </div>
        <span
          class="styles__1mvphq217 styles__1mvphq216 styles_disabled_false__1mvphq219 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow26 style_undefined_compound_75__m4c9ow3i"
          style="--qabug41: normal;"
        >
          step 3
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
